--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" 
          rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" 
-             integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" 
-             crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg==" crossorigin="anonymous" referrerpolicy="no-referrer" />" />
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -39,86 +37,107 @@
 
     <main>
         <section class="hero">
+            <div class="container hero-container">
+                <div class="hero-wrap">
             <h1 class="hero-title">Effective Solutions for Your Business</h1>
             <button class="hero-ord-btn" type="button">Order Service</button>
+        </div>
+        </div>
         </section>
-                <section class="advantages">
-                    <h2 class="visually-hidden">Our advantages</h2>
-                <ul class="advantages-menu-list">
-                    <li class="advantages-menu-item">
-                        <h3 class="advantages-menu-title">Strategy</h3>
-                        <p class="advantages-menu-text">
-                            Our goal is to identify the business
-                            problem to walk away with the perfect and creative solution.    
-                        </p>
-                    </li>
-                    <li class="advantages-menu-item">
-                        <h3 class="advantages-menu-title">Punctuality</h3>
-                            <p class="advantages-menu-text">
-                                Bring the key message to the brand's audience for the best price within the shortest possible time.
-                            </p>
-                    </li>
-                    <li class="advantages-menu-item">
-                        <h3 class="advantages-menu-title">Diligence</h3> 
-                            <p class="advantages-menu-text">
-                                Research and confirm brands that present the strongest digital growth opportunities and minimize risk. 
-                            </p>    
-            </li>
-            <li class="advantages-menu-item">
-                <h3 class="advantages-menu-title">Technologies</h3>
+        <section class="advantages">
+            <div class="container advantages-container">
+            <ul class="advantages-menu-list">
+                <li class="advantages-menu-item">
+                    <h3 class="advantages-menu-title">Strategy</h3>
                     <p class="advantages-menu-text">
-                        Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
+                        Our goal is to identify the business
+                        problem to walk away with the perfect and creative solution.    
                     </p>
-            </li>
-        </ul>
+                </li>
+                <li class="advantages-menu-item">
+                    <h3 class="advantages-menu-title">Punctuality</h3>
+                        <p class="advantages-menu-text">
+                            Bring the key message to the brand's audience for the best price within the shortest possible time.
+                        </p>
+                </li>
+                <li class="advantages-menu-item">
+                    <h3 class="advantages-menu-title">Diligence</h3> 
+                        <p class="advantages-menu-text">
+                            Research and confirm brands that present the strongest digital growth opportunities and minimize risk. 
+                        </p>    
+        </li>
+        <li class="advantages-menu-item">
+            <h3 class="advantages-menu-title">Technologies</h3>
+                <p class="advantages-menu-text">
+                    Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
+                </p>
+        </li>
+    </ul>
+        </div>
+        </main>
         </section>
         <section class="team">
+            <div class="container team-container">
             <h2 class="team-title title">Our Team</h2>
             <ul class="team-menu-list">
               <li class="team-menu-item">
                 <img class="team-image" src="./images/ipg1.jpg" alt="Portrait of Mark Guerrero"
                 width="264"
                 />
+                <div class="team-item">
                 <h3 class="team-menu-title menu-title">Mark Guerrero</h3>
                 <p class="team-menu-text menu-text">Product Designer</p>
-              </li>  
+            </div>
+            </li>  
               <li class="team-menu-item">
                 <img class="team-image" src="./images/ipg2.jpg" alt="Portrait of Tom Ford"
                 width="264"
                 />
+                <div class="team-item">
                 <h3 class="team-menu-title menu-title">Tom Ford</h3>
                 <p class="team-menu-text menu-text">Frontend Developer</p>
-              </li>
+            </div>
+            </li>
               <li class="team-menu-item">
                 <img class="team-image" src="./images/ipg3.jpg" alt="Portrait of Camila Garcia"
                 width="264"
                 />
+                <div class="team-item">
                 <h3 class="team-menu-title menu-title ">Camila Garcia</h3>
                 <p class="team-menu-text menu-text">Marketing</p>
-              </li>
+            </div>
+            </li>
               <li class="team-menu-item">
                 <img class="team-image" src="./images/ipg4.jpg" alt="Portrait of Daniel Wilson"
                 width="264"
                 />
+                <div class="team-item">
                 <h3 class="team-menu-title menu-title">Daniel Wilson</h3>
                 <p class="team-menu-text menu-text">UI Designer</p>
-              </li>
+            </div>
+            </li>
             </ul>
+            </div>
+            </section>
         </section>
         <section class="portfolio">
+            <div class="container portfolio-container">
             <h2 class="portfolio-title title">Our Portfolio</h2>
             <ul class="portfolio-menu-list">
                 <li class="portfolio-menu-item">
                   <img class="portfolio-images" src="./images/img5.jpg" alt="додатки банків"
                 width="360"
                 />
+                <div class="container-item">
                 <h3 class="portfolio-menu-title menu-title">Banking App</h3>
                 <p class="portfolio-menu-text menu-text">App</p>
+             </div>
             </li>
                 <li class="portfolio-menu-item">
                   <img class="portfolio-images" src="./images/img6.jpg" alt="сканування коду"
                 width="360"
                 />
+                <div class="container-item">
                 <h3 class="portfolio-menu-title menu-title">Cashless Payment</h3>
                 <p class="portfolio-menu-text menu-text">Marketing</p>
             </li>
@@ -126,36 +145,48 @@
                 <img class="portfolio-images" src="./images/img7.jpg" alt="ноутбук"
                 width="360"
                 />
+                <div class="container-item">
                 <h3 class="portfolio-menu-title menu-title">Meditation App</h3>
                 <p class="portfolio-menu-text menu-text">App</p>    
+            </div>
             </li>
             <li class="portfolio-menu-item">
                 <img class="portfolio-images" src="./images/img8.jpg" alt="навігатор для автомобілю"
                 width="360"
                 />
+                <div class="container-item">
                 <h3 class="portfolio-menu-title menu-title">Taxi Service</h3>
                 <p class="portfolio-menu-text menu-text">Marketing</p>    
+            </div>
             </li>
             <li class="portfolio-menu-item">
                 <img class="portfolio-images" src="./images/img9.jpg" alt="скрінування"
                 width="360"
                 />
+                <div class="container-item">
                 <h3 class="portfolio-menu-title menu-title">Screen Illustrations</h3>
                 <p class="portfolio-menu-text menu-text">Design</p>    
+            </div>
             </li>
             <li class="portfolio-menu-item">
                 <img class="portfolio-images" src="./images/img10.jpg" alt="фото викладача курсу маркетингу"
                 width="360"/>
+                <div class="container-item">
                 <h3 class="portfolio-menu-title menu-title">Online Courses</h3>
                 <p class="portfolio-menu-text menu-text">Marketing</p>    
+            </div>
             </li>
         </ul>
+        </div>
         </section>
     </main>
    <footer class="footer">
+    <div class="container container-footer">
     <a class="logo" href="./index.html">Web<span class="logo-part-footer">Studio</span></a>
     <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.
     </p>
+    </div>
+    </footer>
    </footer>
 </body>
 </html>
