--- a/index.html
+++ b/index.html
@@ -38,13 +38,14 @@
     <main>
         <section class="hero">
             <div class="container hero-container">
-                <div class="hero-wrap">
-            <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        
+         <h1 class="hero-title">Effective Solutions for Your Business</h1>
             <button class="hero-ord-btn" type="button">Order Service</button>
-        </div>
+        
         </div>
         </section>
         <section class="advantages">
+            <h2 class="visually-hidden">Our advantages</h2>
             <div class="container advantages-container">
             <ul class="advantages-menu-list">
                 <li class="advantages-menu-item">
